[11u] broken JRT_ENTRY_NO_ASYNC after Backport of JDK-8253795

XMLWordPrintable

    • b07

      "runtime/Thread/StopAtExit.java" fails intermittently with "exception oop already set" since backport of JDK-8253795 (commit https://github.com/openjdk/jdk11u-dev/commit/eb0708f75aa3c196e41014addfaa5667fd940cc2 ).

      JRT_ENTRY_NO_ASYNC was changed to use ThreadInVMfromJava (instead of ThreadInVMfromJavaNoAsyncException) which causes async Exceptions (ThreadDeath) to show up at places where we can't handle them (e.g. forward_exception Runtime1 stub).

            Assignee:
            Martin Doerr
            Reporter:
            Martin Doerr
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: