8283270: [11u] broken JRT_ENTRY_NO_ASYNC after Backport of JDK-8253795

Reviewed-by: sgehwolf, clanger